--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             </nav>
     </header>
     <main>
-        <div class="fotoPaginaPrincipal"></div>
+        <div class="fotoPaginaPrincipal">
+            <img src="img/Fondoinicio.jpg" alt="paginaprincipal">
+        </div>
         <div class="infoQuienes">
             <h2>¿Quienes somos?</h2> <br>
             <p>En el año 1946, luego de la segunda guerra mundial, llega a Tandil una familia de inmigrantes, encabezada por Fidel Cardinale, para radicarse en la ciudad e iniciarse en la construcción. De esta familia nacen Francisco y Luis Cardinale.
