bootstrap con js

--- a/index.html
+++ b/index.html
@@ -59,9 +59,27 @@
             </nav>
     </header>
     <main>
-        <div class="fotoPaginaPrincipal">
-            <img src="img/Fondoinicio.jpg" alt="paginaprincipal">
-        </div>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/Fondoinicio.jpg" class="d-block w-100" alt="fondoinicio">
+              </div>
+              <div class="carousel-item">
+                <img src="img/FotoInicio2.jpeg" class="d-block w-100" alt="fondoinicio2">
+              </div>
+              <div class="carousel-item">
+                <img src="img/Fondoinicio3.jpeg" class="d-block w-100" alt="fondoinicio3">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         <div class="infoQuienes">
             <h2>¿Quienes somos?</h2> <br>
             <p>En el año 1946, luego de la segunda guerra mundial, llega a Tandil una familia de inmigrantes, encabezada por Fidel Cardinale, para radicarse en la ciudad e iniciarse en la construcción. De esta familia nacen Francisco y Luis Cardinale.
@@ -69,35 +87,35 @@
             <p>La flota de la compañía de transporte estaba formada en ese entonces por camiones volcadores, tolvas de cemento y equipos cerealeros, que Gustavo pone a disposición de la nueva hormigonera. De esa forma, se aporta a la construcción una oferta sustentable y seria que Tandil, allá por el año 2002 estaba necesitando. Siendo de esta forma Pionera en lo que es bombeos de hormigón en altura y en tecnología en todo lo referido a este rubro.</p>
         </div>
         <div class="container">
-            <div class="row">
+            <div class="row" >
                 <div class="col-2 col-sm-2 col-md-2" id="Bértoli">
                     Bértoli
-                    <img src="img/Nuestrosclientes/bertoli-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
                 </div>
                 <div class="col-2 col-sm-2 col-md-2" id="Coarco S.A.">
                     Coarco S.A.
-                    <img src="img/Nuestrosclientes/coarco-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
                 </div>
                 <div class="col-2 col-sm-2 col-md-2" id="Riva S.A.">
                     Riva S.A.
-                    <img src="img/Nuestrosclientes/riva-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
                 </div>
                 <div class="col-2 col-sm-2 col-md-2" id="Sorsa S.A.">
                     Sorsa S.A.
-                    <img src="img/Nuestrosclientes/sorsa-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
                 </div>
                 <div class="col-2 col-sm-2 col-md-2" id="Eleprint">
                     Eleprint 
-                    <img src="img/Nuestrosclientes/eleprint-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
                 </div>
                 <div class="col-2 col-sm-2 col-md-2" id="Galizio">
                     Galizio
-                    <img src="img/Nuestrosclientes/galizio-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
                 </div>
+            <div class="row">
+                <img class="col-2 col-sm-2 col-md-2" id="Bértoli" src="img/Nuestrosclientes/bertoli-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
+                <img class="col-2 col-sm-2 col-md-2" id="Coarco S.A." src="img/Nuestrosclientes/coarco-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
+                <img class="col-2 col-sm-2 col-md-2" id="Riva S.A." src="img/Nuestrosclientes/riva-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
+                <img class="col-2 col-sm-2 col-md-2" id="Sorsa S.A." src="img/Nuestrosclientes/sorsa-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
+                <img class="col-2 col-sm-2 col-md-2" id="Eleprint" src="img/Nuestrosclientes/eleprint-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
+                <img class="col-2 col-sm-2 col-md-2" id="Galizio"src="img/Nuestrosclientes/galizio-logo-markal.png" alt="icono"  width="280"  class="d-inline-block align-text-top">
             </div>
-            
-
-        </div>
+            </div>
+         </div>
     </main>
     <footer>
         <h1>¿DÓNDE NOS PODES ENCONTRAR?</h1>
