tercer pre entrega

--- a/Contacto.html
+++ b/Contacto.html
@@ -57,19 +57,7 @@
                         </ul>
                   </div>
                 </nav>
-    <main>
-        <h1 class="infoQuienes">Contacto</h1>
-        <br>
-        <div class="imagenContacto">
-            <div class="imagenContacto">
-            <br>
-            <div>
-            <h1 class="infoQuienes">¿CÓMO PODEMOS AYUDARLE?</h1>
-            <br>
-            </div>
-    </main>
-
-    <section>
+    <section id="contacto">
         <h3>Horarios de atención:</h3>
             <br>
         <h3>Lunes a Viernes:9:00 a 18:00 hs.
