--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
           </div>
         <div class="infoQuienes container">
             <h2>¿Quienes somos?</h2> <br>
-            <p>En el año 1946, luego de la segunda guerra mundial, llega a Tandil una familia de inmigrantes, encabezada por Fidel Cardinale, para radicarse en la ciudad e iniciarse en la construcción. De esta familia nacen Francisco y Luis Cardinale.
+            <p class="container">En el año 1946, luego de la segunda guerra mundial, llega a Tandil una familia de inmigrantes, encabezada por Fidel Cardinale, para radicarse en la ciudad e iniciarse en la construcción. De esta familia nacen Francisco y Luis Cardinale.
             Luis Cardinale, dedicado a la construcción desde su inicio, se asocia con Ignacio Diez creando la empresa constructora Cardinale y Diez. <br> Es así que, con todos estos antecedentes familiares, Gustavo, hijo de Luis Cardinale e ahijado de Ignacio Diez, luego de recorrer un camino dedicado al transporte que había iniciado en el año 1992, alentado por una ciudad que crecía y demandaba más y mejores servicios de traslado, decide crear otra empresa avalado por sus conocimientos en transportes. Así nace Markal Hormigonera.</p>
-            <p>La flota de la compañía de transporte estaba formada en ese entonces por camiones volcadores, tolvas de cemento y equipos cerealeros, que Gustavo pone a disposición de la nueva hormigonera. De esa forma, se aporta a la construcción una oferta sustentable y seria que Tandil, allá por el año 2002 estaba necesitando. Siendo de esta forma Pionera en lo que es bombeos de hormigón en altura y en tecnología en todo lo referido a este rubro.</p>
+            <p class="container"> La flota de la compañía de transporte estaba formada en ese entonces por camiones volcadores, tolvas de cemento y equipos cerealeros, que Gustavo pone a disposición de la nueva hormigonera. De esa forma, se aporta a la construcción una oferta sustentable y seria que Tandil, allá por el año 2002 estaba necesitando. Siendo de esta forma Pionera en lo que es bombeos de hormigón en altura y en tecnología en todo lo referido a este rubro.</p>
         </div>
         <div class="container clientes">
             <div class="row" >
