--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+        <div class="container">
+          <p class="tituloOriginal">
+            Prueba extend 1 
+          </p>
+          <p class="tituloCopia">
+            Prueba extend 2
+          </p>
+        </div>  
+
+
+
         <div class="infoQuienes container">
             <h2>¿Quienes somos?</h2> <br>
             <p class="container">En el año 1946, luego de la segunda guerra mundial, llega a Tandil una familia de inmigrantes, encabezada por Fidel Cardinale, para radicarse en la ciudad e iniciarse en la construcción. De esta familia nacen Francisco y Luis Cardinale.
