Aplicando SEO a mi sitio

--- a/Institucional.html
+++ b/Institucional.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/pruebacss.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Source+Sans+Pro:wght@900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7d4193cf05.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Empresa dedicada a la elaboración de hormigón, radicada en la ciudad de Tandil hace más de 20 años">
+    <meta name="keywords"  content="EMPRESA, HORMIGON, CONSTRUCCIÓN, ">
     <title>Institucional</title>
 </head>
 <body>
     <div class="grilla">
     <!--Aqui va la barra de navegacion-->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light navbar-color">
+        <nav id="menu" class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <img src="img/Logo/Logo.png" alt="icono"  width="180"  class="d-inline-block align-text-top" >
@@ -25,17 +26,17 @@
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                  <ul class="navbar-nav mx-auto">
+                  <ul class="navbar-nav">
                         <li class="nav-item">
-                            <h1> Markal <br> Hormigonera S.A. </h1>
+                            <h1 id="titulo"> Markal <br> Hormigonera S.A. </h1>
                         </li>
                         <li class="nav-item redesSociales">
-                            <a href="https://www.instagram.com/markalhormigonera/?hl=es-la" target="_blank">
+                            <a href="https://www.instagram.com/markalhormigonera/?hl=es-la" target="_blank" class="redesSociales mx-0">
                                 <i class="fab fa-instagram redes"></i>
                             </a>
                         </li>
                         <li class="nav-item redesSociales">
-                              <a href="https://www.facebook.com/markalhormigonerasa" class="redesSociales">
+                              <a href="https://www.facebook.com/markalhormigonerasa" target="_blank" class="redesSociales mx-0">
                                 <i class="fab fa-facebook-square"></i>
                               </a>
                         </li>
@@ -57,39 +58,37 @@
                     </ul>
               </div>
             </nav>
-   
     <main>   
-            <div class="infoQuienes">
-                <h1>Sobre nosotros</h1>
-            </div>
+                <h1 class="sobreNosotros pt-3">Sobre nosotros</h1>
         <!-- Aca va la historia de la empresa -->
-        <h2 class="infoQuienes">Nuestros comienzos</h2>
+        <img src="img/Institucional/institucional1.jpeg" alt="insticuional1" width="100%">
         <div class="infoQuienes">
-            <p> La creación de una empresa es parte del acervo cultural de muchos pueblos. Es parte de la acción legítimamente intencional del hombre para mejorar y progresar, al hacerlo se adquiere una responsabilidad para mantenerla y consolidarla en el tiempo.
-                A partir de allí, todos aquellos involucrados directa e indirectamente con su desarrollo tendrán la posibilidad de hacer sus proyecciones en función de su calidad de vida. </p>
-            <p> Crear una empresa podrá ser un acto individual pero su devenir y sus resultados son definitivamente colectivos. Es así que, cuando nace una empresa, nace un empresario que asume una opción de vida y que involucra también las opciones de vida de quienes lo acompañan. </p>
-            <p>Luego de la crisis del 2002, Tandil demandaba una propuesta seria en hormigón elaborado, donde haya aporte a nivel empresa y con un responsable control de calidad. Así es que, en plena recuperación de la crisis económica argentina, Markal comienza a levantar su planta elaboradora de Hormigón. </p>
-            <p> Markal Hormigonera cuenta con el apoyo y asesoramiento de empresas del rubro como Pavisur, Pavi, Cementos Avellaneda, ésta última fundada en 1940 y que lidera el sector de cemento. Además del asesoramiento de laboratorios y técnicos de la UNICEN. </p>
-            <p> –“Todas las hormigoneras producen hormigones, pero la única en la Provincia de Buenos Aires que lo hace con certificación ISO 9001 desde el año 2006 es Markal Hormigonera S.A “– menciona Gustavo, .– agrega el titular de la empresa. </p>
-            <p> –“De esta forma, podemos dar seguridad y garantía de nuestros hormigones porque somos conscientes que de nuestra calidad depende todo el éxito de la obra”.– termina diciendo el titular de la empresa. </p>
+        <h2> Nuestros comienzos</h2>
+            <p>La creación de una empresa es parte del acervo cultural de muchos pueblos. Es parte de la acción legítimamente intencional del hombre para mejorar y progresar, al hacerlo se adquiere una responsabilidad para mantenerla y consolidarla en el tiempo.
+               A partir de allí, todos aquellos involucrados directa e indirectamente con su desarrollo tendrán la posibilidad de hacer sus proyecciones en función de su calidad de vida. Crear una empresa podrá ser un acto individual pero su devenir y sus resultados son definitivamente colectivos. Es así que, cuando nace una empresa, nace un empresario que asume una opción de vida y que involucra también las opciones de vida de quienes lo acompañan. </p>
+            <p>Luego de la crisis del 2002, Tandil demandaba una propuesta seria en hormigón elaborado, donde haya aporte a nivel empresa y con un responsable control de calidad. Así es que, en plena recuperación de la crisis económica argentina, Markal comienza a levantar su planta elaboradora de Hormigón. Markal Hormigonera cuenta con el apoyo y asesoramiento de empresas del rubro como Pavisur, Pavi, Cementos Avellaneda, ésta última fundada en 1940 y que lidera el sector de cemento. Además del asesoramiento de laboratorios y técnicos de la UNICEN. –“Todas las hormigoneras producen hormigones, pero la única en la Provincia de Buenos Aires que lo hace con certificación ISO 9001 desde el año 2006 es Markal Hormigonera S.A “– menciona Gustavo, .– agrega el titular de la empresa. –“De esta forma, podemos dar seguridad y garantía de nuestros hormigones porque somos conscientes que de nuestra calidad depende todo el éxito de la obra”.– termina diciendo el titular de la empresa. </p>
         </div>
-        <h2 class="infoQuienes">Nuestros servicios</h2>
-        <p class="infoQuienes">Ponemos a su disposición el mejor equipamiento:
-            <br>10 equipos Mixer Hormigón entre los cuales contamos con 4 semis de 10 mts3 cada uno.
-            <br>3 Bombas de Hormigón.
-            <br>1 bomba Putzmeister con pluma de 24 mts.
-            <br>1 Mixer bomba marca Marota de pluma especial para bombeos chicos en altura.
-            <br>1 bomba de arrastre para bombeos en edificios de zona céntrica, debido a que no ocupa demasiado lugar.
-            <br>20 equipos volcadores propios.
-            <br>5 Tolvas de cemento de larga distancia con las cuales proveemos nuestro propio transporte.
-        </p>
+        <div class="infoQuienes">
+        <h2>Nuestros servicios</h2>
+        <ul>Ponemos a su disposición el mejor equipamiento:
+            <li>10 equipos Mixer Hormigón entre los cuales contamos con 4 semis de 10 mts3 cada uno. </li>
+            <li>3 Bombas de Hormigón. </li>
+            <li>1 bomba Putzmeister con pluma de 24 mts. </li>
+            <li>1 Mixer bomba marca Marota de pluma especial para bombeos chicos en altura. </li>
+            <li>1 bomba de arrastre para bombeos en edificios de zona céntrica, debido a que no ocupa demasiado lugar. </li>
+            <li>20 equipos volcadores propios. </li>
+            <li>5 Tolvas de cemento de larga distancia con las cuales proveemos nuestro propio transporte. </li>
+        </ul>
+        </div>
     </main>
     </header>
     <footer>
         <h1 class="mapa">¿DÓNDE NOS PODES ENCONTRAR?</h1>
-        <ul class="mapa">
+        <ul class="direccion">
             <li>Piedrabuena 904</li>
-            <li>Tandil (7000)</li>
+            <li>Tandil (B7000), Provincia de Buenos Aires</li>
+            <li>Horario: Lunes a sabado: 09:00–12:30, 15:00–18:00 </li>
+            <li>Teléfono: 0249 444-0372 <li>
         </ul>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.2192623164265!2d-59.1164714845114!3d-37.31363361336356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95911ffa8aa43d99%3A0x1b3ce0e94b40837e!2sPiedrabuena%20904%2C%20B7001%20Tandil%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1629489295483!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </footer>
