--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/pruebacss.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Source+Sans+Pro:wght@900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7d4193cf05.js" crossorigin="anonymous"></script>
     <title>Markal Hormigonera S.A.</title>
 </head>
@@ -25,17 +24,17 @@
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                  <ul class="navbar-nav mx-auto">
-                        <li id="titulo" class="nav-item">
-                            <h1> Markal <br> Hormigonera S.A. </h1>
+                  <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <h1 id="titulo"> Markal <br> Hormigonera S.A. </h1>
                         </li>
                         <li class="nav-item redesSociales">
-                            <a href="https://www.instagram.com/markalhormigonera/?hl=es-la" target="_blank">
+                            <a href="https://www.instagram.com/markalhormigonera/?hl=es-la" target="_blank" class="redesSociales mx-0">
                                 <i class="fab fa-instagram redes"></i>
                             </a>
                         </li>
                         <li class="nav-item redesSociales">
-                              <a href="https://www.facebook.com/markalhormigonerasa" class="redesSociales">
+                              <a href="https://www.facebook.com/markalhormigonerasa" target="_blank" class="redesSociales mx-0">
                                 <i class="fab fa-facebook-square"></i>
                               </a>
                         </li>
@@ -80,24 +79,15 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-        <div class="container">
-          <p class="tituloOriginal">
-            Prueba extend 1 
-          </p>
-          <p class="tituloCopia">
-            Prueba extend 2
-          </p>
-        </div>  
-
-
-
-        <div class="infoQuienes container">
-            <h2>¿Quienes somos?</h2> <br>
-            <p class="container">En el año 1946, luego de la segunda guerra mundial, llega a Tandil una familia de inmigrantes, encabezada por Fidel Cardinale, para radicarse en la ciudad e iniciarse en la construcción. De esta familia nacen Francisco y Luis Cardinale.
+      
+         <div class="infoQuienes">
+            <h2>¿Quienes somos?</h2>
+            <p>En el año 1946, luego de la segunda guerra mundial, llega a Tandil una familia de inmigrantes, encabezada por Fidel Cardinale, para radicarse en la ciudad e iniciarse en la construcción. De esta familia nacen Francisco y Luis Cardinale.
             Luis Cardinale, dedicado a la construcción desde su inicio, se asocia con Ignacio Diez creando la empresa constructora Cardinale y Diez. <br> Es así que, con todos estos antecedentes familiares, Gustavo, hijo de Luis Cardinale e ahijado de Ignacio Diez, luego de recorrer un camino dedicado al transporte que había iniciado en el año 1992, alentado por una ciudad que crecía y demandaba más y mejores servicios de traslado, decide crear otra empresa avalado por sus conocimientos en transportes. Así nace Markal Hormigonera.</p>
-            <p class="container"> La flota de la compañía de transporte estaba formada en ese entonces por camiones volcadores, tolvas de cemento y equipos cerealeros, que Gustavo pone a disposición de la nueva hormigonera. De esa forma, se aporta a la construcción una oferta sustentable y seria que Tandil, allá por el año 2002 estaba necesitando. Siendo de esta forma Pionera en lo que es bombeos de hormigón en altura y en tecnología en todo lo referido a este rubro.</p>
-        </div>
-        <div class="container clientes">
+            <p> La flota de la compañía de transporte estaba formada en ese entonces por camiones volcadores, tolvas de cemento y equipos cerealeros, que Gustavo pone a disposición de la nueva hormigonera. De esa forma, se aporta a la construcción una oferta sustentable y seria que Tandil, allá por el año 2002 estaba necesitando. Siendo de esta forma Pionera en lo que es bombeos de hormigón en altura y en tecnología en todo lo referido a este rubro.</p> 
+          </div> 
+            <h1 class="nuestrosClientes">Nuestros clientes</h1>
+        <div class="container clientes"> <br>
             <div class="row" >
                 <div class="col-2 col-sm-2 col-md-2" id="Bértoli">
                 <p>Bértoli</p>    
@@ -130,9 +120,11 @@
     </main>
     <footer>
         <h1 class="mapa">¿DÓNDE NOS PODES ENCONTRAR?</h1>
-        <ul class="mapa">
+        <ul class="direccion">
             <li>Piedrabuena 904</li>
-            <li>Tandil (7000)</li>
+            <li>Tandil (B7000), Provincia de Buenos Aires</li>
+            <li>Horario: Lunes a sabado: 09:00–12:30, 15:00–18:00 </li>
+            <li>Teléfono: 0249 444-0372 <li>
         </ul>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.2192623164265!2d-59.1164714845114!3d-37.31363361336356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95911ffa8aa43d99%3A0x1b3ce0e94b40837e!2sPiedrabuena%20904%2C%20B7001%20Tandil%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1629489295483!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </footer>
