--- a/Contacto.html
+++ b/Contacto.html
@@ -8,125 +8,125 @@
     <link rel="stylesheet" href="css/pruebacss.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Source+Sans+Pro:wght@900&display=swap" rel="stylesheet">    
     <script src="https://kit.fontawesome.com/7d4193cf05.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Empresa dedicada a la elaboración de hormigón, radicada en la ciudad de Tandil hace más de 20 años">
+    <meta name="keywords"  content="EMPRESA, HORMIGON, CONSTRUCCIÓN, ">
     <title>Contacto</title>
 </head>
 <body>
     <div class="grilla">
         <!--Aqui va la barra de navegacion-->
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light navbar-color">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="img/Logo/Logo.png" alt="icono"  width="180"  class="d-inline-block align-text-top" >
-                      </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                      <ul class="navbar-nav mx-auto">
-                            <li class="nav-item">
-                                <h1> Markal <br> Hormigonera S.A. </h1>
-                            </li>
-                            <li class="nav-item redesSociales">
-                                <a href="https://www.instagram.com/markalhormigonera/?hl=es-la" target="_blank">
-                                    <i class="fab fa-instagram redes"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item redesSociales">
-                                  <a href="https://www.facebook.com/markalhormigonerasa" class="redesSociales">
-                                    <i class="fab fa-facebook-square"></i>
-                                  </a>
-                            </li>
-                          <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                          </li>
-                          <li class="nav-item">
-                          <a class="nav-link active" href="Institucional.html">Institucional</a>
-                          </li>
-                          <li class="nav-item">
-                          <a class="nav-link active" href="Productos.html">Productos </a>
-                          </li>
-                          <li class="nav-item">
-                          <a class="nav-link active" href="Proyectosrealizados.html">Proyectos realizados</a>
-                          </li>
-                          <li class="nav-item">
-                          <a class="nav-link active" href="Contacto.html">Contacto</a>
-                          </li>
-                        </ul>
-                  </div>
-                </nav>
+            <div class="grilla">
+                <!--Aqui va la barra de navegacion-->
+                <header>
+                    <nav id="menu" class="navbar navbar-expand-lg navbar-light">
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="index.html">
+                                <img src="img/Logo/Logo.png" alt="icono"  width="180"  class="d-inline-block align-text-top" >
+                              </a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                              <ul class="navbar-nav">
+                                    <li class="nav-item">
+                                        <h1 id="titulo"> Markal <br> Hormigonera S.A. </h1>
+                                    </li>
+                                    <li class="nav-item redesSociales">
+                                        <a href="https://www.instagram.com/markalhormigonera/?hl=es-la" target="_blank" class="redesSociales mx-0">
+                                            <i class="fab fa-instagram redes"></i>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item redesSociales">
+                                          <a href="https://www.facebook.com/markalhormigonerasa" target="_blank" class="redesSociales mx-0">
+                                            <i class="fab fa-facebook-square"></i>
+                                          </a>
+                                    </li>
+                                  <li class="nav-item">
+                                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                                  </li>
+                                  <li class="nav-item">
+                                  <a class="nav-link active" href="Institucional.html">Institucional</a>
+                                  </li>
+                                  <li class="nav-item">
+                                  <a class="nav-link active" href="Productos.html">Productos </a>
+                                  </li>
+                                  <li class="nav-item">
+                                  <a class="nav-link active" href="Proyectosrealizados.html">Proyectos realizados</a>
+                                  </li>
+                                  <li class="nav-item">
+                                  <a class="nav-link active" href="Contacto.html">Contacto</a>
+                                  </li>
+                                </ul>
+                          </div>
+                        </nav>
     <section id="contacto">
+        <img src="img/Contacto/imagenContacto.jpeg" alt="contacto" width="100%" height="40%">
         <h3>Horarios de atención:</h3>
             <br>
-        <h3>Lunes a Viernes:9:00 a 18:00 hs.
+        <h2>Lunes a Viernes:9:00 a 18:00 hs.
             Sábado:9:00 a 13:00 hs.
-            Domingo: Cerrado
-        </h3>
+            Domingo: Cerrado </h2>
         <br>
         <h3>Dirección</h3>
-        <h3>PIEDRABUENA 904</h3>
+        <h2>PIEDRABUENA 904</h2>
         <br>
         <h3>Teléfono</h3>
-        <H3>(0249) 444-0372</H3>
+        <h2>(0249) 444-0372</h2>
         <br>
         <h3>TAMBIÉN NOS PODES ENCONTRAR EN NUESTRAS REDES SOCIALES, DONDE TE ENTERARÁS DE LAS ÚLTIMAS NOVEDADES</h3>
         <a href="https://www.instagram.com/markalhormigonera/?hl=es-la" class="redesSociales">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-instagram"> </i>
         </a>
         <a href="https://www.facebook.com/markalhormigonerasa" class="redesSociales">
             <i class="fab fa-facebook-square"></i>
         </a>
         <br>
     </section>
-    <main class="infoQuienes">
-        <p class="infoQuienes">Completa el formulario y nos pondremos en contacto con usted a la brevedad</p>
-        <form action="">
-            <fieldset>
-                <legend>
-                <p>Contactanos</p>
-                </legend>
-                <label for="Nombre completo">Nombre:</label>
-                <input type="text" placeholder="Ingrese su nombre completo" id="Nombre completo">
-                <br>
-                <label for="Nombrecompleto">Nombre:</label>
-                <input type="text" placeholder="Ingrese su nombre completo" id="Nombrecompleto">
-                <br>
-                <label for="Apellidocompleto">Apellido: </label>
-                <input type="text" placeholder="Ingrese su apellido completo" id="Apellido completo">
-                <br>
-                <label for="Correoelectrónico">Correcto electrónico</label>
-                <input type="text" placeholder="Ingrese su correo electrónico" id="Correo electrónico">
-                <br>
-                <label for="Asunto">Asunto:</label>
-                <input type="text" placeholder="Ingrese el asunto" id="Asunto">
-                <br>
-                <label for="Comentario">Comentario:</label>
-                <input type="text" placeholder="Ingrese su comentario o mensaje" id="Comentario">
-                <br>
-
-                <p>¿En qué te podemos ayudar?</p>
-                <select name="" id="">
-                    <option value="">Quiero recibir un presupuesto</option>
-                    <option value="">Necesito saber que hormigon utilizar</option>
-                    <option value="">Otro asunto</option>
+    <section>
+        <div class="container formulario" style="max-width: 500px" id="contenedor-formulario">
+            <div class="text-center mb-4" id="titulo-formulario">
+                <h2>Completa el formulario y nos pondremos en contacto con usted a la brevedad</h2>
+                    <p class="fs-5"> Contactanos </p>
+            </div>
+            <form action="">     
+                <div class= "mb-3">           
+                    <input type="email" class="form-control" id="email" placeholder="Ingresa su nombre completo">
+                </div>
+                <div class= "mb-3">           
+                    <input type="email" class="form-control" id="email" placeholder="Ingresa su apellido completo">
+                </div>
+                <div class="mb-3">            
+                    <input type="input" class="form-control" id="nombre" placeholder="Ingresa su correo electrónico">
+                </div>
+                <div class="mb-3">
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingresa tu teléfono">
+                </div>
+                <div class="mb-3">       
+                     <textarea class="form-control" id="msj" placeholder="Asunto" rows="4"></textarea>
+                </div>
+                <select name="" id="" >
+                    <option value=""> Quiero recibir un presupuesto</option>
+                    <option value=""> Necesito saber que hormigon utilizar</optino>
+                    <option value=""> Otro asunto </option>
                 </select>
-                <br>
-            <p> Recibir las últimas novedades</p> <input type="checkbox" name="" id="">
-            <br>
-            <input type="submit" value="Enviar información">
-            <br>
-            <input type="reset" value="Restaurar">
-            </fieldset>
-        </form>
-    </main>
+              
+                <div class="mb-3">
+                    <button type="button" id="colordeBoton" class=" btn w-100 fs-5">Enviar Mensaje</button>
+                </div>
+            </form>
+        </div>
+    </section>
     </header>
     <footer>
         <h1 class="mapa">¿DÓNDE NOS PODES ENCONTRAR?</h1>
-        <ul class="mapa">
+        <ul class="direccion">
             <li>Piedrabuena 904</li>
-            <li>Tandil (7000)</li>
+            <li>Tandil (B7000), Provincia de Buenos Aires</li>
+            <li>Horario: Lunes a sabado: 09:00–12:30, 15:00–18:00 </li>
+            <li>Teléfono: 0249 444-0372 <li>
         </ul>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.2192623164265!2d-59.1164714845114!3d-37.31363361336356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95911ffa8aa43d99%3A0x1b3ce0e94b40837e!2sPiedrabuena%20904%2C%20B7001%20Tandil%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1629489295483!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </footer>
