--- a/Productos.html
+++ b/Productos.html
@@ -8,56 +8,60 @@
     <link rel="stylesheet" href="css/pruebacss.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Source+Sans+Pro:wght@900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7d4193cf05.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Empresa dedicada a la elaboración de hormigón, radicada en la ciudad de Tandil hace más de 20 años">
+    <meta name="keywords"  content="EMPRESA, HORMIGON, CONSTRUCCIÓN, ">
     <title>Productos</title>
 </head>
 <body>
    <div class="grilla">
     <!--Aqui va la barra de navegacion-->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light navbar-color">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img src="img/Logo/Logo.png" alt="icono"  width="180"  class="d-inline-block align-text-top" >
-                  </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                  <ul class="navbar-nav mx-auto">
-                        <li class="nav-item">
-                            <h1> Markal <br> Hormigonera S.A. </h1>
-                        </li>
-                        <li class="nav-item redesSociales">
-                            <a href="https://www.instagram.com/markalhormigonera/?hl=es-la" target="_blank">
-                                <i class="fab fa-instagram redes"></i>
-                            </a>
-                        </li>
-                        <li class="nav-item redesSociales">
-                              <a href="https://www.facebook.com/markalhormigonerasa" class="redesSociales">
-                                <i class="fab fa-facebook-square"></i>
-                              </a>
-                        </li>
-                      <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                      <a class="nav-link active" href="Institucional.html">Institucional</a>
-                      </li>
-                      <li class="nav-item">
-                      <a class="nav-link active" href="Productos.html">Productos </a>
-                      </li>
-                      <li class="nav-item">
-                      <a class="nav-link active" href="Proyectosrealizados.html">Proyectos realizados</a>
-                      </li>
-                      <li class="nav-item">
-                      <a class="nav-link active" href="Contacto.html">Contacto</a>
-                      </li>
-                    </ul>
-              </div>
-            </nav>
-
+      <div class="grilla">
+        <!--Aqui va la barra de navegacion-->
+        <header>
+            <nav id="menu" class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="img/Logo/Logo.png" alt="icono"  width="180"  class="d-inline-block align-text-top" >
+                      </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                      <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <h1 id="titulo"> Markal <br> Hormigonera S.A. </h1>
+                            </li>
+                            <li class="nav-item redesSociales">
+                                <a href="https://www.instagram.com/markalhormigonera/?hl=es-la" target="_blank" class="redesSociales mx-0">
+                                    <i class="fab fa-instagram redes"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item redesSociales">
+                                  <a href="https://www.facebook.com/markalhormigonerasa" target="_blank" class="redesSociales mx-0">
+                                    <i class="fab fa-facebook-square"></i>
+                                  </a>
+                            </li>
+                          <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                          </li>
+                          <li class="nav-item">
+                          <a class="nav-link active" href="Institucional.html">Institucional</a>
+                          </li>
+                          <li class="nav-item">
+                          <a class="nav-link active" href="Productos.html">Productos </a>
+                          </li>
+                          <li class="nav-item">
+                          <a class="nav-link active" href="Proyectosrealizados.html">Proyectos realizados</a>
+                          </li>
+                          <li class="nav-item">
+                          <a class="nav-link active" href="Contacto.html">Contacto</a>
+                          </li>
+                        </ul>
+                  </div>
+                </nav>
     <main>
         <div  class="infoQuienes">
         <H1>Productos y laboratorio</H1>
@@ -111,7 +115,8 @@
     </main>
     <main> 
         <div class="infoQuienes">
-            <H2>Laboratorio</H2>
+            <H2>Laboratorio </H2>
+            <img class="laboratorio mx-auto" src="img/Productos y laboratorio /laboratio.png" alt="laboratorio" width="50%">
             <h4>CONTAMOS CON UN MODERNO LABORATORIO PROPIO DONDE SE RESPETAN TODAS LAS PAUTAS ESTABLECIDAS EN EL REGLAMENTO CIRSOC 2021 VIGENTE, PARA EL CONTROL DE CALIDAD DEL HORMIGON.</h4>
             <p>Markal cuenta con laboratorio propio en Planta para controlar la calidad de los hormigones diseñados y entregados en las diferentes obras. <br> El mismo cuenta con instrumentos calibrados por entes homologados (INTI) y supervisados por IRAM. Contamos con los todos los certificados vigentes de los dispositivos y balanzas para ser presentados como documentación de obra a quien lo requiera, respaldando la calidad de cada diseño de H° entregado.
                 Contamos con personal capacitado en planta y en obra para realizar los ensayos reglamentarios de control de los parámetros de calidad del hormigón. <br>
@@ -121,9 +126,11 @@
     </header>
     <footer>
       <h1 class="mapa">¿DÓNDE NOS PODES ENCONTRAR?</h1>
-      <ul class="mapa">
+      <ul class="direccion">
           <li>Piedrabuena 904</li>
-          <li>Tandil (7000)</li>
+          <li>Tandil (B7000), Provincia de Buenos Aires</li>
+          <li>Horario: Lunes a sabado: 09:00–12:30, 15:00–18:00 </li>
+          <li>Teléfono: 0249 444-0372 <li>
       </ul>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.2192623164265!2d-59.1164714845114!3d-37.31363361336356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95911ffa8aa43d99%3A0x1b3ce0e94b40837e!2sPiedrabuena%20904%2C%20B7001%20Tandil%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1629489295483!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </footer>
