--- a/Institucional.html
+++ b/Institucional.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/pruebacss.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Source+Sans+Pro:wght@900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7d4193cf05.js" crossorigin="anonymous"></script>
@@ -59,18 +59,18 @@
               </div>
             </nav>
     <main>   
-                <h1 class="sobreNosotros pt-3">Sobre nosotros</h1>
+                <h1 class="sobreNosotros pt-3 py-3">Sobre nosotros</h1>
         <!-- Aca va la historia de la empresa -->
-        <img src="img/Institucional/institucional1.jpeg" alt="insticuional1" width="100%">
-        <div class="infoQuienes">
+        <img src="img/Institucional/institucional1.jpeg" alt="institucional1" width="100%">
+        <div class="infoQuienes py-5">
         <h2> Nuestros comienzos</h2>
             <p>La creación de una empresa es parte del acervo cultural de muchos pueblos. Es parte de la acción legítimamente intencional del hombre para mejorar y progresar, al hacerlo se adquiere una responsabilidad para mantenerla y consolidarla en el tiempo.
                A partir de allí, todos aquellos involucrados directa e indirectamente con su desarrollo tendrán la posibilidad de hacer sus proyecciones en función de su calidad de vida. Crear una empresa podrá ser un acto individual pero su devenir y sus resultados son definitivamente colectivos. Es así que, cuando nace una empresa, nace un empresario que asume una opción de vida y que involucra también las opciones de vida de quienes lo acompañan. </p>
             <p>Luego de la crisis del 2002, Tandil demandaba una propuesta seria en hormigón elaborado, donde haya aporte a nivel empresa y con un responsable control de calidad. Así es que, en plena recuperación de la crisis económica argentina, Markal comienza a levantar su planta elaboradora de Hormigón. Markal Hormigonera cuenta con el apoyo y asesoramiento de empresas del rubro como Pavisur, Pavi, Cementos Avellaneda, ésta última fundada en 1940 y que lidera el sector de cemento. Además del asesoramiento de laboratorios y técnicos de la UNICEN. –“Todas las hormigoneras producen hormigones, pero la única en la Provincia de Buenos Aires que lo hace con certificación ISO 9001 desde el año 2006 es Markal Hormigonera S.A “– menciona Gustavo, .– agrega el titular de la empresa. –“De esta forma, podemos dar seguridad y garantía de nuestros hormigones porque somos conscientes que de nuestra calidad depende todo el éxito de la obra”.– termina diciendo el titular de la empresa. </p>
         </div>
-        <div class="infoQuienes">
-        <h2>Nuestros servicios</h2>
-        <ul>Ponemos a su disposición el mejor equipamiento:
+        <div class="nuestrosServicios py-5"> 
+        <h2 class="nuestrosServicios"> Nuestros servicios</h2>
+        <ul class="nuestrosServicios" >Ponemos a su disposición el mejor equipamiento:
             <li>10 equipos Mixer Hormigón entre los cuales contamos con 4 semis de 10 mts3 cada uno. </li>
             <li>3 Bombas de Hormigón. </li>
             <li>1 bomba Putzmeister con pluma de 24 mts. </li>
