--- a/Productos.html
+++ b/Productos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/pruebacss.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Source+Sans+Pro:wght@900&display=swap" rel="stylesheet">
@@ -63,10 +63,10 @@
                   </div>
                 </nav>
     <main>
-        <div  class="infoQuienes">
-        <H1>Productos y laboratorio</H1>
-        <H2>Productos</H2>
-        <p>–“Nosotros tenemos doble control, en primer lugar, el nuestro, verificando todas las entregas propias mediante la extracción de muestras (probetas), bajo norma IRAM y posterior ensayo a los 28 días para informar al cliente la resistencia lograda en cada una de las entregas, siendo en Tandil la única Hormigonera con Laboratorio propio. Y por otra parte poseemos el control externo de un organismo como el Instituto Argentino de Normalización y Certificación (IRAM), al cual convocamos para que nos controle y certifique el proceso de elaboración y entrega en obra de nuestros productos”
+        <div  class="productos py-3">
+        <H1 class="productos">Productos y laboratorio</H1>
+        <H2 class="productos">Productos</H2>
+        <p class="productos">–“Nosotros tenemos doble control, en primer lugar, el nuestro, verificando todas las entregas propias mediante la extracción de muestras (probetas), bajo norma IRAM y posterior ensayo a los 28 días para informar al cliente la resistencia lograda en cada una de las entregas, siendo en Tandil la única Hormigonera con Laboratorio propio. Y por otra parte poseemos el control externo de un organismo como el Instituto Argentino de Normalización y Certificación (IRAM), al cual convocamos para que nos controle y certifique el proceso de elaboración y entrega en obra de nuestros productos”
         </p>
         <br>
         </div>
@@ -114,7 +114,7 @@
           </table>
     </main>
     <main> 
-        <div class="infoQuienes">
+        <div class="lab py-5">
             <H2>Laboratorio </H2>
             <img class="laboratorio mx-auto" src="img/Productos y laboratorio /laboratio.png" alt="laboratorio" width="50%">
             <h4>CONTAMOS CON UN MODERNO LABORATORIO PROPIO DONDE SE RESPETAN TODAS LAS PAUTAS ESTABLECIDAS EN EL REGLAMENTO CIRSOC 2021 VIGENTE, PARA EL CONTROL DE CALIDAD DEL HORMIGON.</h4>
