--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/pruebacss.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Source+Sans+Pro:wght@900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7d4193cf05.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Empresa dedicada a la elaboración de hormigón, radicada en la ciudad de Tandil hace más de 20 años">
+    <meta name="keywords"  content="EMPRESA, HORMIGON, CONSTRUCCIÓN, "> 
     <title>Markal Hormigonera S.A.</title>
 </head>
 <body>
@@ -80,14 +82,14 @@
             </button>
           </div>
       
-         <div class="infoQuienes">
+         <div class="infoQuienes py-5">
             <h2>¿Quienes somos?</h2>
             <p>En el año 1946, luego de la segunda guerra mundial, llega a Tandil una familia de inmigrantes, encabezada por Fidel Cardinale, para radicarse en la ciudad e iniciarse en la construcción. De esta familia nacen Francisco y Luis Cardinale.
             Luis Cardinale, dedicado a la construcción desde su inicio, se asocia con Ignacio Diez creando la empresa constructora Cardinale y Diez. <br> Es así que, con todos estos antecedentes familiares, Gustavo, hijo de Luis Cardinale e ahijado de Ignacio Diez, luego de recorrer un camino dedicado al transporte que había iniciado en el año 1992, alentado por una ciudad que crecía y demandaba más y mejores servicios de traslado, decide crear otra empresa avalado por sus conocimientos en transportes. Así nace Markal Hormigonera.</p>
             <p> La flota de la compañía de transporte estaba formada en ese entonces por camiones volcadores, tolvas de cemento y equipos cerealeros, que Gustavo pone a disposición de la nueva hormigonera. De esa forma, se aporta a la construcción una oferta sustentable y seria que Tandil, allá por el año 2002 estaba necesitando. Siendo de esta forma Pionera en lo que es bombeos de hormigón en altura y en tecnología en todo lo referido a este rubro.</p> 
           </div> 
             <h1 class="nuestrosClientes">Nuestros clientes</h1>
-        <div class="container clientes"> <br>
+        <div class="clientes">
             <div class="row" >
                 <div class="col-2 col-sm-2 col-md-2" id="Bértoli">
                 <p>Bértoli</p>    
